Fix chat overflow bug

--- a/play.css
+++ b/play.css
@@ -199,6 +199,7 @@ body {
 }
 
 #chatboxContent {
+  display: contents;
   height: calc(100% - 16px);
 }
 
